# zvm

./: .gitmodules  CMakeLists.txt  README.md  zvm.code-workspace
cmake/: prelude.cmake
code/include/zvm/: byte-code.h  config.h  zvm.h
code/sources/: zvm.cpp
